--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -24,17 +24,17 @@
           <a class="nav-link" href="#">Data <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="comparisons.html">Comparison</a>
+          <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="humidity.html">Humdity</a>
-            <a class="dropdown-item" href="max_speed.html">Wind Speed</a>
-            <a class="dropdown-item" href="max_temp.html">Temperature</a>
-            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="hum">humdity</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
       </ul>
@@ -42,45 +42,32 @@
   </nav>
 
 <body>
+  <section>
+    <h2>Comparison: Latitude vs. X</h2>
+    <hr/>
+    <p>Click on any graph to get an in-depth analysis.</p>
+  </section>
     <div class = "container">
       <div class = "row">
-        <div class = "col-md-8">
-
-          <h1>Summary: Latitude vs. X</h1>
-          <hr />
-          <img src="images/fig1.png"  id = "landing_photo"/>
-
-      
-           <!-- <div style="text-align: left"><img src="images/fig1.png" width=auto /></div> -->
-          <P> The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to asseble a dataset on over 500 cities.</P>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.
-          </P>
-
+        <div class = "col-md-6">
+           <div>
+             <h3>vs. Max Temperature</h3>
+              <a href = "max_temp.html">  <img src = "images/fig1.png" class = medium_photo /></a>
+              <h3>vs. Humidity</h3>
+              <a href = "humidity.html">  <img src = "images/fig2.png" class = medium_photo /></a>
+            </div>
+          </div>
+          
+          <div class = "col-md-6">
+            <div>
+              <h3>vs. Cloudiness</h3>
+              <a href = "cloudiness.html">  <img src = "images/fig3.png" class = medium_photo /></a>
+              <h3>vs. Wind Speed</h3>
+              <a href = "max_speed.html">  <img src = "images/fig4.png" class = medium_photo /></a>
+             </div>
+           </div>  
         </div>
-
-
-
-
-
-        <div class = "col-md-4">
-            <section>
-                <h2>Summary: Latitude vs. X</h2>
-                <hr/>
-
-                <div>
-                  <a href = "#">  <img src = "images/fig1.png" class = "small_photos" /></a>
-                  <a href = "#">  <img src = "images/fig2.png" class = "small_photos" /></a>
-                  <a href = "#">  <img src = "images/fig3.png" class = "small_photos" /></a>
-                  <a href = "#">  <img src = "images/fig4.png" class = "small_photos" /></a>
-                </div>
-            </section>
-        </div>
-
       </div>
-
-
-
-   
     </div>
 
 
