--- a/WebVisualizations/max_temp.html
+++ b/WebVisualizations/max_temp.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Lattitude Comparison</title>
+  <title>Max Temperature</title>
 
   <!-- stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,9 +32,9 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="humidity.html">Humdity</a>
-            <a class="dropdown-item" href="max_speed.html">Wind Speed</a>
-            <a class="dropdown-item" href="max_temp.html">Temperature</a>
-            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
       </ul>
@@ -46,14 +46,14 @@
       <div class = "row">
         <div class = "col-md-8">
 
-          <h1>Summary: Latitude vs. X</h1>
+          <h1>Max Temperature</h1>
           <hr />
-          <img src="images/fig1.png"  id = "landing_photo"/>
+          <img src="images/fig1.png"  id = "max_temp"/>
 
       
            <!-- <div style="text-align: left"><img src="images/fig1.png" width=auto /></div> -->
-          <P> The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to asseble a dataset on over 500 cities.</P>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.
+          <P> As expected, as one gets closer to the equator, the temperature starts to rise.</P>
+          <p>Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words Add more words .
           </P>
 
         </div>
@@ -77,17 +77,3 @@
         </div>
 
       </div>
-
-
-
-   
-    </div>
-
-
-  <!-- not sure what this is -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-
-</html>
