--- a/WebVisualizations/humidity copy.html
+++ b/WebVisualizations/humidity copy.html
@@ -42,11 +42,12 @@
 </nav>
 
 <body>
-    <div class = "container">
-      <div class = "row">
+    
+    <div class = "row">
+      <div class = "container">
         <div class = "col-md-8">
 
-          <h2>Humidity</h2>
+          <h1>Humidity</h1>
           <hr />
           <img src="images/fig2.png"  id = "humidity"/>
 
@@ -55,7 +56,9 @@
           <P> This graph shows that humidity can vary greatly depending on where you are. And in some cases, it can be incredibly high! It's likely this data was collected in a season with more humid months.</P>
 
         </div>
-
+      </div>  
+      
+      <div class = "container">
         <div class = "col-md-4">
             <section>
                 <h2>Summary: Latitude vs. X</h2>
@@ -69,6 +72,7 @@
                 </div>
             </section>
         </div>
+
       </div>
     </div>
 </body>
