--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Data <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="data.html">Data <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="comparisons.html">Comparison</a>
@@ -48,19 +48,14 @@
 
           <h1>Summary: Latitude vs. X</h1>
           <hr />
-          <img src="images/fig1.png"  id = "landing_photo"/>
+          <img src="images/fig1.png"  id = "landing_photo" class="landing_photo">
 
       
            <!-- <div style="text-align: left"><img src="images/fig1.png" width=auto /></div> -->
           <P> The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to asseble a dataset on over 500 cities.</P>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.
-          </P>
-
-        </div>
-
-
-
-
+          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</P>
+          <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered. </p>
+          </div>  
 
         <div class = "col-md-4">
             <section>
@@ -68,26 +63,23 @@
                 <hr/>
 
                 <div>
-                  <a href = "#">  <img src = "images/fig1.png" class = "small_photos" /></a>
-                  <a href = "#">  <img src = "images/fig2.png" class = "small_photos" /></a>
-                  <a href = "#">  <img src = "images/fig3.png" class = "small_photos" /></a>
-                  <a href = "#">  <img src = "images/fig4.png" class = "small_photos" /></a>
+                  <a href = "max_temp.html"><img src = "images/fig1.png" class = "small_photos" /></a>
+                  <a href = "humidity.html"><img src = "images/fig2.png" class = "small_photos" /></a>
+                  <a href = "cloudiness.html"><img src = "images/fig3.png" class = "small_photos" /></a>
+                  <a href = "max_speed.html"><img src = "images/fig4.png" class = "small_photos" /></a>
                 </div>
             </section>
+          </div> 
         </div>
-
       </div>
-
-
-
-   
     </div>
 
 
-  <!-- not sure what this is -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+    <!-- not sure what this is -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
+  </body>
 
 </html>
